Fixing layout bug

--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -49,6 +49,7 @@
       }
       &.top{
         top: -200px;
+        position: relative;
         pointer-events: none;
       }
     }
